--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <img v-bind:src="image" v-bind:alt="altText" />
         </div>
         <div class="product-info">
-          <h1>{{ product }}</h1>
+          <h1>{{ title }}</h1>
           <p v-if="inStock">In Stock</p>
           <p v-else>Out Of Stock</p>
           <!-- <p v-if="inventory > 10">In Stock</p>
@@ -24,11 +24,34 @@
           <ul>
             <li v-for="detail in details">{{ detail }}</li>
           </ul>
-          <div v-for="variant in variants" :key="variant.variantId">
-            <p @mouseover="updateProduct(variant.variantImage)">{{ variant.variantColor }}</p>
+          <div class="color-box-container">
+            <div
+              v-for="(variant, index) in variants"
+              :key="variant.variantId"
+              class="color-box"
+              :style="{backgroundColor: variant.variantColor}"
+              @mouseover="updateProduct(index)"
+            ></div>
           </div>
 
-          <button v-on:click="addToCart">Add To Cart</button>
+          <!-- <span :style="styleObject">Test</span>
+          <p :style="[styleObject, styleObject2]">Test</p> -->
+          <!-- <div class="color-box" :class="{ active: activeClass, 'text-danger': errorClass }">
+            Test dev for classes
+          </div>
+          <div :class="classObject">
+            Test dev for classObject
+          </div>
+          <div :class="[activeClassArray, errorClassArray]">
+            Test dev for classArray
+          </div> -->
+          <!-- <div :class="[isActive ? activeClass : '']">
+            Test dev for ternary operator
+          </div> -->
+
+          <button v-on:click="addToCart" :disabled="!inStock" :class="{ disabledButton: !inStock}">
+            Add To Cart
+          </button>
 
           <div class="cart">
             <p>Cart({{cart}})</p>
