--- a/index.html
+++ b/index.html
@@ -10,54 +10,8 @@
   <body>
     <div class="nav-bar"></div>
     <div id="app">
-      <div class="product">
-        <div class="product-image">
-          <img v-bind:src="image" v-bind:alt="altText" />
-        </div>
-        <div class="product-info">
-          <h1>{{ title }}</h1>
-          <p v-if="inStock">In Stock</p>
-          <p v-else>Out Of Stock</p>
-          <!-- <p v-if="inventory > 10">In Stock</p>
-          <p v-else-if="inventory <= 10 && inventory > 0">Almost Sold Out</p>
-          <p v-else>Out Of Stock</p> -->
-          <ul>
-            <li v-for="detail in details">{{ detail }}</li>
-          </ul>
-          <div class="color-box-container">
-            <div
-              v-for="(variant, index) in variants"
-              :key="variant.variantId"
-              class="color-box"
-              :style="{backgroundColor: variant.variantColor}"
-              @mouseover="updateProduct(index)"
-            ></div>
-          </div>
-
-          <!-- <span :style="styleObject">Test</span>
-          <p :style="[styleObject, styleObject2]">Test</p> -->
-          <!-- <div class="color-box" :class="{ active: activeClass, 'text-danger': errorClass }">
-            Test dev for classes
-          </div>
-          <div :class="classObject">
-            Test dev for classObject
-          </div>
-          <div :class="[activeClassArray, errorClassArray]">
-            Test dev for classArray
-          </div> -->
-          <!-- <div :class="[isActive ? activeClass : '']">
-            Test dev for ternary operator
-          </div> -->
-
-          <button v-on:click="addToCart" :disabled="!inStock" :class="{ disabledButton: !inStock}">
-            Add To Cart
-          </button>
-
-          <div class="cart">
-            <p>Cart({{cart}})</p>
-          </div>
-        </div>
-      </div>
+      <Product :premium="premium"></Product>
+      <Product :premium="premium"></Product>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="main.js"></script>
