--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <body>
     <div class="nav-bar"></div>
     <div id="app">
-      <Product :premium="premium"></Product>
-      <Product :premium="premium"></Product>
+      <div class="cart">
+        <p>Cart({{cart.length}})</p>
+      </div>
+      <Product :premium="premium" @add-to-cart="updateCart"></Product>
+      <Product :premium="premium" @add-to-cart="updateCart"></Product>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
     <script src="main.js"></script>
